--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,10 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My Git4Hub Profile</a></p>
         {% endif %}
 
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="{{ site.github.owner_url }}">Scholar</a></p>
+        {% endif %}
+
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
