--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,10 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My Git4Hub Profile</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a></p>
         {% endif %}
 
+        {% if site.github.is_user_page %}
         <p class="view"><a href="{{https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl}}">Scholar</a></p>
         {% endif %}
 
