--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl}}">Scholar</a></p>
+        <p class="view"><a href="https://github.com/orderedlist">orderedlist</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
