--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,17 +22,43 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl">Scholar</a></p>
         {% endif %}
+
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="https://www.researchgate.net/profile/Kenneth_Bunker">Research Gate</a></p>
+        {% endif %}
+
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a></p>
+        {% endif %}
+
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="https://camiz.academia.edu/KennethBunker">Academia</a></p>
+        {% endif %}
+
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="http://orcid.org/0000-0002-4579-6132">ORCID</a></p>
+        {% endif %}
+
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="https://www.dropbox.com/s/0zx2kmx35ah8z8s/CV_Kenneth_Bunker.pdf?dl=0">CV</a></p>
+        {% endif %}
+
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="https://medium.com/@kennethbunker">Medium</a></p>
+        {% endif %}
+
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="http://www.tresquintos.cl/">Tresquintos</a></p>
+        {% endif %}
+
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a></p>
         {% endif %}
 
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl">Scholar</a></p>
-        {% endif %}
 
         {% if site.show_downloads %}
         <ul class="downloads">
