--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% if site.avatar %}
+          <img src="{{site.avatar | relative_url}}" alt="Avatar" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
