--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,15 +43,12 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="http://orcid.org/0000-0002-4579-6132">ORCID</a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
         <p class="view"><a href="https://www.dropbox.com/s/0zx2kmx35ah8z8s/CV_Kenneth_Bunker.pdf?dl=0">CV</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
         <ul class="downloads">
+          <p class="view"><a href="https://www.dropbox.com/s/0zx2kmx35ah8z8s/CV_Kenneth_Bunker.pdf?dl=0">CV</a></p>
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
