--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,15 +42,11 @@
         <p class="view"><a href="https://camiz.academia.edu/KennethBunker">Academia</a></p>
         {% endif %}
 
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="https://www.dropbox.com/s/0zx2kmx35ah8z8s/CV_Kenneth_Bunker.pdf?dl=0">CV</a></p>
-        {% endif %}
-
         {% if site.show_downloads %}
         <ul class="downloads">
-          <li><a href="https://www.dropbox.com/s/0zx2kmx35ah8z8s/CV_Kenneth_Bunker.pdf?dl=0">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://www.dropbox.com/s/0zx2kmx35ah8z8s/CV_Kenneth_Bunker.pdf?dl=0">Download<strong>CV</strong></a></li>
+          <li><a href="https://github.com/kennethbunker">Data<strong>GitHub</strong></a></li>
+          <li><a href="https://dataverse.harvard.edu/dataverse/kennethbunker">Data<strong>Dataverse</strong></a></li>
         </ul>
         {% endif %}
       </header>
