--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,11 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub<small>{{ site.github.repository_nwo }}</small></a></p>
+        {% endif %}
+        
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl">Google Scholar</a></p>
         {% endif %}
         
         {% if site.github.is_user_page %}
@@ -35,18 +39,14 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl">Scholar</a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
         <p class="view"><a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="https://www.dropbox.com/s/0zx2kmx35ah8z8s/CV_Kenneth_Bunker.pdf?dl=0">Download<strong>CV</strong></a></li>
-          <li><a href="https://dataverse.harvard.edu/dataverse/kennethbunker">Data<strong>Dataverse</strong></a></li>
-          <li><a href="https://github.com/kennethbunker">View On<strong>GitHub</strong></a></li>
+          <li><a href="https://dataverse.harvard.edu/dataverse/kennethbunker">View On<strong>Dataverse</strong></a></li>
+          <li><a href="https://github.com/kennethbunker">Data<strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
       </header>
