--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,15 +25,15 @@
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub<small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
-        
+
         {% if site.github.is_user_page %}
         <p class="view"><a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl">Google Scholar</a></p>
         {% endif %}
-        
+
         {% if site.github.is_user_page %}
         <p class="view"><a href="https://www.researchgate.net/profile/Kenneth_Bunker">Research Gate</a></p>
         {% endif %}
-        
+
         {% if site.github.is_user_page %}
         <p class="view"><a href="https://camiz.academia.edu/KennethBunker">Academia</a></p>
         {% endif %}
@@ -41,6 +41,11 @@
         {% if site.github.is_user_page %}
         <p class="view"><a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a></p>
         {% endif %}
+
+        {% if site.linkedin.is_user_page %}
+        <p class="view"><a href="https://www.linkedin.com/in/kennethbunker/">Linkedin</a></p>
+        {% endif %}
+
 
         {% if site.show_downloads %}
         <ul class="downloads">
