--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,10 @@
         <p class="view"><a href="https://camiz.academia.edu/KennethBunker">Academia</a></p>
         {% endif %}
 
+        {% if site.linkedin.is_user_page %}
+        <p class="view"><a href="https://www.linkedin.com/in/kennethbunker/">Linkedin</a></p>
+        {% endif %}
+
         {% if site.github.is_user_page %}
         <p class="view"><a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a></p>
         {% endif %}
