--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XHPPDNKH57');
+    </script>
+
+    
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
@@ -41,7 +52,7 @@
         {% if site.github.is_user_page %}
         <p class="view"><a href="https://www.linkedin.com/in/kennethbunker/">Linkedin</a></p>
         {% endif %}
-        
+
         {% if site.github.is_user_page %}
         <p class="view"><a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a></p>
         {% endif %}
