--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,10 @@
         <p class="view"><a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a></p>
         {% endif %}
 
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="https://kennethbunker.github.io/press">Press</a></p>
+        {% endif %}
+
 
         {% if site.show_downloads %}
         <ul class="downloads">
