--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,9 +58,20 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="https://kennethbunker.github.io/press">Press</a></p>
+        <p class="view"><a href="https://kennethbunker.github.io/press">Press (World)</a></p>
         {% endif %}
 
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a></p>
+        {% endif %}
+
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="https://kennethbunker.github.io/covers">Front Page Covers</a></p>
+        {% endif %}
+
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="https://kennethbunker.github.io/columns">Columns</a></p>
+        {% endif %}
 
         {% if site.show_downloads %}
         <ul class="downloads">
