--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="https://kennethbunker.github.io/press">Press (World)</a></p>
+        <p class="view"><a href="https://kennethbunker.github.io/press">Press (Global)</a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
