--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="https://kennethbunker.github.io/covers">Front Page Covers</a></p>
+        <p class="view"><a href="https://kennethbunker.github.io/covers">Front Page</a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
