--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,10 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
+        <p class="view"><a href="https://www.linkedin.com/in/kennethbunker/">LinkedIn</a></p>
+        {% endif %}
+
+        {% if site.github.is_user_page %}
         <p class="view"><a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl">Google Scholar</a></p>
         {% endif %}
 
@@ -51,10 +55,6 @@
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="https://kennethbunker.github.io/covers">Front Page</a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="https://kennethbunker.github.io/columns">Columns</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
